# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-15 21:36:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-67

    Summary:
      Updated Cabal file to 0.6.0
    Revision:
      missingh--head--0.5--patch-67


    modified files:
     ChangeLog Setup.description


2004-11-15 21:33:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-66

    Summary:
      Updated Cabal files
    Revision:
      missingh--head--0.5--patch-66


    modified files:
     ChangeLog Setup.description


2004-11-15 21:31:21 GMT	John Goerzen <jgoerzen@complete.org>	patch-65

    Summary:
      Updated control file to use more recent haskell-devscripts
    Revision:
      missingh--head--0.5--patch-65


    modified files:
     ChangeLog debian/changelog debian/control
     libsrc/MissingH/Printf.hs libsrc/MissingH/Printf/Types.hs


2004-11-15 21:05:53 GMT	John Goerzen <jgoerzen@complete.org>	patch-64

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.5--patch-64


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 20:48:27 GMT	John Goerzen <jgoerzen@complete.org>	patch-63

    Summary:
      Genericized AL
    Revision:
      missingh--head--0.5--patch-63


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 20:41:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-62

    Summary:
      Association list printing working
    Revision:
      missingh--head--0.5--patch-62


    modified files:
     ChangeLog libsrc/MissingH/Printf.hs testsrc/Printftest.hs


2004-11-15 20:27:31 GMT	John Goerzen <jgoerzen@complete.org>	patch-61

    Summary:
      Experimental AL work for Printf
    Revision:
      missingh--head--0.5--patch-61


    removed files:
     libsrc/MissingH/Varargs.hs

    modified files:
     ChangeLog README libsrc/MissingH/Printf.hs
     libsrc/MissingH/Printf/Types.hs

