@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
 #
 
+2004-11-17 20:56:00 GMT	John Goerzen <jgoerzen@complete.org>	patch-68
+
+    Summary:
+      Added generic sprintfG functions
+    Revision:
+      missingh--head--0.5--patch-68
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Printf.hs
+
+
 2004-11-15 21:36:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-67
 
     Summary:
